Fixed some styles and changed wrapping "divs" by Fragments.
If applied, this commit will have fixed some styles and changed the "divs" to Fragments as a better approach, because Fragments are empty nodes unlike to divs.

--- a/src/components/DisplayUsers/UsersData.module.css
+++ b/src/components/DisplayUsers/UsersData.module.css
@@ -15,5 +15,5 @@
   justify-content: center;
   align-items: center;
   background-color: inherit;
-  gap: 1rem;
+  margin-right: 0.5rem;
 }
